fix: adjust subtitle and info letter spacing

--- a/src/less/__mixins.less
+++ b/src/less/__mixins.less
@@ -24,7 +24,7 @@
     &__info {
       color: var(--secondary);
       font-size: 0.9375rem; // mobile 15px
-      letter-spacing: 0.01em;
+      letter-spacing: 0.02em;
       margin: 0.25rem 0 0;
       text-transform: uppercase;
 
